--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 :root {
   --background-color: #1472dd;
   --card-clr: #fff;
+  --default-clr: #000;
   --font: 'Oswald', sans-serif;
 }
 
 body {
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-self: center;
+  place-items: center;
   min-height: 100vh;
   background-color: var(--background-color);
   font-family: var(--font);
@@ -15,38 +16,62 @@ body {
 
 .wrapper {
   display: flex;
-  gap: 1.2rem;
+  gap: 3rem;
 }
 
 .card {
+  --_button-clr: var(--default-clr);
+  --_shadow-clr: var(--default-clr);
+  display: grid;
+  grid-template-rows: auto 1fr;
   overflow: hidden;
   height: 450px;
   width: 330px;
   background-color: var(--card-clr);
   border-radius: 12px;
-  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+  box-shadow: 8px 8px 24px 0px var(--shadow-clr);
 
   & img {
     width: 100%;
     height: 210px;
     object-fit: cover;
   }
+
+  & .card__information {
+    display: flex;
+    flex-direction: column;
+    padding: 0.6rem;
+
+    & :is(h2, p) {
+      margin-block: 0 1rem;
+    }
+
+    & button {
+      margin-top: auto;
+      cursor: pointer;
+      width: 100%;
+      background-color: var(--_button-clr);
+      color: #fff;
+      border: none;
+      padding: 10px 18px;
+      border-radius: 12px;
+      font-size: 0.8rem;
+      font-weight: 700;
+    }
+  }
 }
 
-.card__informations {
-  display: flex;
-  flex-direction: column;
-  padding: 0.4rem;
+.card.card--purple {
+  --_button-clr: #4e0a85;
+  --shadow-clr: #c796f0;
+}
 
-  & h2 {
-    margin-block: 0 1rem;
-  }
+.card.card--blue {
+  --_button-clr: #0d31a7;
+  --shadow-clr: #2cbadd;
+}
 
-  & p {
-    margin-block: 0 1rem;
-  }
-
-  & button {
-    margin-top: auto;
-  }
+.card.card--orange {
+  --_button-clr: #b8670c;
+  --shadow-clr: #e9983c;
 }
